[gd_scene load_steps=21 format=2]

[ext_resource path="res://art/background 2.png" type="Texture" id=1]
[ext_resource path="res://Scenes/bottom_ui.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/top_ui.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/grid.gd" type="Script" id=4]
[ext_resource path="res://Scripts/ice_holder.gd" type="Script" id=5]
[ext_resource path="res://Scripts/lock_holder.gd" type="Script" id=6]
[ext_resource path="res://Scripts/concrete_holder.gd" type="Script" id=7]
[ext_resource path="res://Scripts/slime_holder.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Game Over Panel.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Sinker.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scripts/GoalHolder.gd" type="Script" id=11]
[ext_resource path="res://Scenes/GoalPrefab.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=13]
[ext_resource path="res://Scenes/Game Win Screen.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Goal.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/Pause.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/HintEffect.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scripts/MusicPlayer.gd" type="Script" id=18]
[ext_resource path="res://Scenes/Camera2D.tscn" type="PackedScene" id=19]
[ext_resource path="res://art/Pieces/Blue Piece.png" type="Texture" id=20]

[node name="game_window" type="Node2D"]

[node name="GameManager" type="Node" parent="."]
script = ExtResource( 13 )
width = 8
height = 10
level = 12
is_moves = true
max_counter = 37
max_score = 1000
points_per_piece = 15

[node name="MoveTimer" type="Timer" parent="GameManager"]

[node name="GoalHolder" type="Node" parent="GameManager"]
script = ExtResource( 11 )

[node name="Goal" parent="GameManager/GoalHolder" instance=ExtResource( 15 )]
goal_texture = ExtResource( 20 )
max_needed = 6
goal_string = "blue"

[node name="Camera2D" parent="." instance=ExtResource( 19 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="background" type="TextureRect" parent="CanvasLayer"]
margin_right = 576.0
margin_bottom = 1024.0
texture = ExtResource( 1 )

[node name="top_ui" parent="CanvasLayer" instance=ExtResource( 3 )]
margin_right = 576.0
margin_bottom = 192.0
goal_prefab = ExtResource( 12 )

[node name="bottom_ui" parent="CanvasLayer" instance=ExtResource( 2 )]
margin_top = 932.0
margin_bottom = 1024.0

[node name="grid" type="Node2D" parent="."]
script = ExtResource( 4 )
x_start = 64
y_start = 800
offset = 64
y_offset = 2
lock_spaces = PoolVector2Array( 0, 0, 0, 1, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 1, 0, 1, 1, 1, 2, 1, 3, 1, 4, 1, 5, 1, 6 )
possible_pieces = PoolStringArray( "res://Scenes/yellow_piece.tscn", "res://Scenes/blue_piece.tscn", "res://Scenes/pink_piece.tscn", "res://Scenes/orange_piece.tscn", "res://Scenes/green_piece.tscn" )
hint_effect = ExtResource( 17 )
sinker_piece = ExtResource( 10 )

[node name="ShuffleTimer" type="Timer" parent="grid"]
wait_time = 0.5
one_shot = true

[node name="HintTimer" type="Timer" parent="grid"]
wait_time = 3.0
one_shot = true

[node name="ice_holder" type="Node2D" parent="."]
script = ExtResource( 5 )
value = "ice"

[node name="lock_holder" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="concrete_holder" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="slime_holder" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="destory_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="refill_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Game Over Panel" parent="." instance=ExtResource( 9 )]

[node name="Game Win Screen" parent="." instance=ExtResource( 14 )]

[node name="Pause" parent="." instance=ExtResource( 16 )]

[node name="MusicPlayer" type="Node" parent="."]
script = ExtResource( 18 )

[connection signal="create_goal" from="GameManager" to="CanvasLayer/top_ui" method="_on_GameManager_create_goal"]
[connection signal="game_won" from="GameManager" to="Game Win Screen" method="_on_GameManager_game_won"]
[connection signal="set_counter_info" from="GameManager" to="CanvasLayer/top_ui" method="_on_GameManager_set_counter_info"]
[connection signal="set_dimensions" from="GameManager" to="grid" method="_on_GameManager_set_dimensions"]
[connection signal="set_score_info" from="GameManager" to="CanvasLayer/top_ui" method="_on_GameManager_set_score_info"]
[connection signal="timeout" from="GameManager/MoveTimer" to="GameManager" method="_on_MoveTimer_timeout"]
[connection signal="notfiy_of_level" from="CanvasLayer/top_ui" to="GameManager/GoalHolder" method="_on_top_ui_notfiy_of_level"]
[connection signal="booster" from="CanvasLayer/bottom_ui" to="grid" method="_on_bottom_ui_booster"]
[connection signal="pause_game" from="CanvasLayer/bottom_ui" to="Pause" method="_on_bottom_ui_pause_game"]
[connection signal="camera_effect" from="grid" to="Camera2D" method="_on_grid_camera_effect"]
[connection signal="check_goal" from="grid" to="CanvasLayer/top_ui" method="_on_grid_check_goal"]
[connection signal="check_goal" from="grid" to="GameManager" method="_on_grid_check_goal"]
[connection signal="damage_concrete" from="grid" to="concrete_holder" method="_on_grid_damage_concrete"]
[connection signal="damage_ice" from="grid" to="ice_holder" method="_on_grid_damage_ice"]
[connection signal="damage_lock" from="grid" to="lock_holder" method="_on_grid_damage_lock"]
[connection signal="damage_slime" from="grid" to="slime_holder" method="_on_grid_damage_slime"]
[connection signal="make_concrete" from="grid" to="concrete_holder" method="_on_grid_make_concrete"]
[connection signal="make_ice" from="grid" to="ice_holder" method="_on_grid_make_ice"]
[connection signal="make_lock" from="grid" to="lock_holder" method="_on_grid_make_lock"]
[connection signal="make_slime" from="grid" to="slime_holder" method="_on_grid_make_slime"]
[connection signal="place_camera" from="grid" to="Camera2D" method="_on_grid_place_camera"]
[connection signal="play_sound" from="grid" to="MusicPlayer" method="_on_grid_play_sound"]
[connection signal="update_counter" from="grid" to="GameManager" method="_on_grid_update_counter"]
[connection signal="update_score" from="grid" to="GameManager" method="_on_grid_update_score"]
[connection signal="timeout" from="grid/ShuffleTimer" to="grid" method="_on_ShuffleTimer_timeout"]
[connection signal="timeout" from="grid/HintTimer" to="grid" method="_on_HintTimer_timeout"]
[connection signal="break_ice" from="ice_holder" to="CanvasLayer/top_ui" method="_on_ice_holder_break_ice"]
[connection signal="break_ice" from="ice_holder" to="GameManager" method="_on_ice_holder_break_ice"]
[connection signal="remove_lock" from="lock_holder" to="grid" method="_on_lock_holder_remove_lock"]
[connection signal="remove_concrete" from="concrete_holder" to="grid" method="_on_concrete_holder_remove_concrete"]
[connection signal="remove_slime" from="slime_holder" to="grid" method="_on_slime_holder_remove_slime"]
[connection signal="timeout" from="destory_timer" to="grid" method="_on_destory_timer_timeout"]
[connection signal="timeout" from="collapse_timer" to="grid" method="_on_collapse_timer_timeout"]
[connection signal="timeout" from="refill_timer" to="grid" method="_on_refill_timer_timeout"]
